# ros2_panda-robotiq_control

./: panda_teleop.py  robot_control_flow.py
franka_description/robots/: panda_arm.xacro  panda_arm_robotiq.urdf.xacro
franka_moveit_config/config/: panda_robotiq_controllers.yaml  panda_robotiq_ros_controllers.yaml
franka_moveit_config/launch/: moveit_robotiq.launch.py
franka_moveit_config/srdf/: panda_arm_robotiq.srdf.xacro  panda_arm_robotiq.xacro
franka_robotiq_description/launch/: visualize.launch.py
franka_robotiq_description/rviz/: visualize_w_mp.rviz
franka_robotiq_description/urdf/: robot.urdf.xacro
franka_robotiq_moveit_config/: CMakeLists.txt
franka_robotiq_moveit_config/config/: arm.xacro  kinematics.yaml  kinematics_bio.yaml  moveit_controllers.yaml  moveit_controllers_1.yaml  ompl_planning.yaml  panda_controllers.yaml  panda_controllers_mujoco.yaml  robotiq_controllers.yaml  robotiq_controllers_mujoco.yaml  robotiq_gripper.xacro  ros2_controllers.yaml  servo.yaml
franka_robotiq_moveit_config/launch/: moveit_robot.launch.py  moveit_robot_test.launch.py
panda_moveit_practice/: CMakeLists.txt  LICENSE.txt  package.xml
panda_moveit_practice/launch/: panda_moveit_practice.launch.py
panda_moveit_practice/src/: panda_moveit_practice_node.cpp
